# alb

./: .gitignore  Makefile  README  README.md  alb.cabal  cabal.project  hbc.sh  stack.yaml
doc/: calling_from_c.txt  grammar.tex  habit-aligned-mem-proposal.txt  index.txt  pipeline.tex  pipeline.txt  primitives.txt  tests.txt
examples/: bst.hb  fib.hb  fibsigned.hb  gdtac.hb  io.hb  list.hb  miniprelude.hb  three.hb
lib/: io.hb  list.hb  mem.hb  prelude.hb
libraries/: README.md
libraries/indentation-core/: CHANGELOG.md  README.md  indentation-core.cabal
perftest/: .gitignore  Makefile  README  ackermann.hb  area1.hb  basicloop.hb  cheney.hb  diff.sh  eq.hb  eqloop.hb  md5demo.hb  monad1.hb  monad2.hb  monad3.hb  monad4.hb  mutualrecursion.hb  mutualrecursion.hs  neq.hb  neqloop.hb  newbool.hb  newboolperftest.hb  newbooltest.hb  nmeq.hb  nmneq.hb  prelude.hb  recurse.hb  shalloweq.hb  shallowneq.hb  shallowrecurse.hb  sortarea.hb  sortheap.hb  test.sh
samples/: dtac.hb
src/: Analyzer.hs  Common.hs  CompCert.hs  Driver.hs  Ilab.hs  LC.hs  LCC.hs  Literate.lhs  MILTools.hs  Mon6a.lhs  Normalizer.hs  Parser.hs  Solver.hs  Specializer.lhs  Typechecker.hs
tests/: Bench.hb  BigArray.hb  ImproveGeneric.hb  Lambda.hb  Makefile  Mersenne.hb  PatternMatchStr.hb  Scope.hb  Simple.hb  State.hb  areas.hb  assocTypes.lhb  bindtest.hb  bitdata.hb  bitdatadefns.hb  bubble.hb  bug0050.hb  bug0677.hb  bug25.hb  bugIxBound.hb  captest.lhb  caseExprs.lhb  caseFromTests.lhb  cases2.hb  collapse.lhb  colonhash.hb  datatype.hb  defaults.hb  doNotation.lhb  dtac.hb  duplicateclass.hb  evcase.hb  example-test.hb  explode.hb  external-area.hb  (+67 more)
(+277 files in other folders)
