name:                indentation-core
version:             0.0.0.3
synopsis:            Indentation sensitive parsing combinators core library
description:         Indentation sensitive parsing combinators core library
                     .
                     This is the core for the indentation package.
                     For common use, consider one of the front-ends:
                     indentation-parsec or indentation-trifecta.  For
                     both, or for backward compatability, install
                     indentation.

license:             BSD3
license-file:        LICENSE
author:              Michael D. Adams <http://michaeldadams.org/>
maintainer:          Ömer Sinan Ağacan <omeragacan@gmail.com>
                     Aleksey Kliger <aleksey@lambdageek.org>
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

homepage:            https://github.com/adamsmd/indentation
bug-reports:         https://github.com/adamsmd/indentation/issues
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.2.1, GHC == 8.4.3, GHC == 8.6.1, GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/adamsmd/indentation.git

library
  hs-source-dirs:      src
  exposed-modules:     Text.Parser.Indentation.Implementation
  build-depends:       base >=4.6,
                       mtl >=2.1

  default-language:    Haskell2010

  ghc-options:         -Wall
